# modbus_device

./: Cargo.toml  README.md  Testing.md
src/: errors.rs  industrial_device.rs  modbus_connexion_async.rs  modbus_device.rs  modbus_device_async.rs  register.rs  types.rs  utils.rs
tests/: holding_registers.json  input_registers.json  test_async.rs  test_sync.rs
