[package]
name = "modbus_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "0.13.1", default-features = false, features = ["tcp-sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"

[lib]
path = "src/modbus_device.rs"
