[package]
name = "modbus_device"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "0.13.1", default-features = false, features = ["tcp-sync", "rtu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
trait-variant = "0.1.2"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-serial = "5.4.4"
industrial_device = { git = "https://github.com/lkzjdnb/industrial_device.git", version = "0.1.2" }
custom_error = "1.9.2"
async-trait = "0.1.82"

[lib]
path = "src/modbus_device_async.rs"

[dev-dependencies]
testcontainers = "0.21.1"
